# healthcare

./: .env.example  .env.tmpl  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  docker-compose.mac.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: cli.py  cli_vapid.py  config.py  db.py  logging.py  main.py  perf.py  scheduler.py
backend/app/api/: activity.py  admin.py  advice_feedback.py  airgap.py  airgap_insight.py  alcohol.py  atlas.py  becoming.py  body_comp.py  body_distribution.py  bodyload.py  caffeine.py  checkin.py  checkup.py  consult.py  corporate_finance.py  dashboard.py  debug.py  domain.py  equipment.py  exercise.py  (+27 more)
backend/tests/: conftest.py  test_achievement.py  test_activity_api.py  test_activity_signal.py  test_advice_feedback_api.py  test_airgap_ingest.py  test_airgap_insight.py  test_alcohol_api.py  test_apple_fallback.py  test_atlas.py  test_becoming_api.py  test_becoming_metrics.py  test_becoming_snapshot.py  test_becoming_trajectory.py  test_body_comp_api.py  test_body_composition.py  test_body_distribution_api.py  test_body_trend.py  test_bodyload.py  test_bodymap.py  test_book_tracker_import.py  test_budget_snapshot_status.py  test_caffeine.py  test_caffeine_api.py  test_checkin_api.py  test_checkin_suggest.py  test_checkup.py  test_checkup_api.py  test_circadian.py  test_consult_api.py  test_consult_tools.py  test_corporate_finance.py  test_corporate_finance_api.py  test_dashboard_api.py  test_db.py  test_domain_api.py  test_domains.py  test_dynamic_impulse_hold.py  test_equipment_api.py  test_exercise_api.py  (+83 more)
(+288 files in other folders)
