[project]
name = "healthcare-backend"
version = "0.1.0"
description = "Personal healthcare dashboard backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "garminconnect>=0.2.20",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-dateutil>=2.9",
    "numpy>=2.0",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
# RUF001/002/003 false-flag full-width Japanese punctuation; B008 trips on FastAPI Depends().
ignore = ["E501", "RUF001", "RUF002", "RUF003", "B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.uv]
package = false
